--- a/EmulationStation/RetroStation.csproj
+++ b/EmulationStation/RetroStation.csproj
@@ -75,6 +75,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataRep\DataManagement.cs" />
     <Compile Include="Forms\frmPlatManager.cs">
       <SubType>Form</SubType>
     </Compile>
